Finished hero section

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main_container">
         <nav>
-            <h1 class="title">Start Bootstrap</h1>
+            <h1>Start Bootstrap</h1>
 
             <ul class="menu">
                 <li class="option">Portfolio</li>
@@ -19,6 +19,19 @@
                 <li class="option">Contact</li>
             </ul>
         </nav>
+
+        <div class="hero_section">
+            <img src ="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="bootstrap avatar">
+            <h1 class="title">Start bootstrap</h1>
+
+            <div class="divider">
+                <hr/>
+                <img src="https://www.citypng.com/public/uploads/small/116590439378xswiuosucgm5hnoc13iy8pvkjvtgk8yisxf2fhzbtns4cfrtcmmi9jvcgkri8qvzydqaanqijsogr1n3qc8m2voghyihorr6g49.png" alt="star image">
+                <hr/>
+            </div>
+
+            <p>Graphic Artist - Web Designer - Illustrator</p>
+        </div>
     </div>   
 </body>
 </html>
