Finished portfolio section

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -25,12 +25,31 @@
             <h1 class="title">Start bootstrap</h1>
 
             <div class="divider">
-                <hr/>
+                <hr class="border"/>
                 <img src="https://www.citypng.com/public/uploads/small/116590439378xswiuosucgm5hnoc13iy8pvkjvtgk8yisxf2fhzbtns4cfrtcmmi9jvcgkri8qvzydqaanqijsogr1n3qc8m2voghyihorr6g49.png" alt="star image">
-                <hr/>
+                <hr class="border"/>
             </div>
 
             <p>Graphic Artist - Web Designer - Illustrator</p>
+        </div>
+
+        <div class="portfolios_section">
+            <h1 class="portfolio_title">Portfolio</h1>
+
+            <div class="divider">
+                <hr class="border gray_border"/>
+                <img src="https://www.citypng.com/public/uploads/small/116590439378xswiuosucgm5hnoc13iy8pvkjvtgk8yisxf2fhzbtns4cfrtcmmi9jvcgkri8qvzydqaanqijsogr1n3qc8m2voghyihorr6g49.png" alt="star image">
+                <hr class="border gray_border"/>
+            </div>
+
+            <div class="images">
+                <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png" alt="cabin image">
+                <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png" alt="cake image">
+                <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png" alt="circus image">
+                <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png" alt="game image">
+                <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png" alt="safe image">
+                <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="submarine image">
+            </div>
         </div>
     </div>   
 </body>
