Finished About section

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -34,11 +34,11 @@
         </div>
 
         <div class="portfolios_section">
-            <h1 class="portfolio_title">Portfolio</h1>
+            <h1 class="sub_title">Portfolio</h1>
 
             <div class="divider">
                 <hr class="border gray_border"/>
-                <img src="https://www.citypng.com/public/uploads/small/116590439378xswiuosucgm5hnoc13iy8pvkjvtgk8yisxf2fhzbtns4cfrtcmmi9jvcgkri8qvzydqaanqijsogr1n3qc8m2voghyihorr6g49.png" alt="star image">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5JO6QfXR2DNTITDvC4hG86tY0mvfPXrxn0Q&usqp=CAU" alt="star image">
                 <hr class="border gray_border"/>
             </div>
 
@@ -50,6 +50,27 @@
                 <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png" alt="safe image">
                 <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="submarine image">
             </div>
+        </div>
+
+        <div class="about_section">
+            <h1 class="sub_title white">About</h1>
+
+            <div class="divider">
+                <hr class="border"/>
+                <img src="https://www.citypng.com/public/uploads/small/116590439378xswiuosucgm5hnoc13iy8pvkjvtgk8yisxf2fhzbtns4cfrtcmmi9jvcgkri8qvzydqaanqijsogr1n3qc8m2voghyihorr6g49.png" alt="star image">
+                <hr class="border"/>
+            </div>
+
+            <div class="info">
+                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. 
+                    The download includes the complete source files including HTML, CSS, 
+                    and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                <p>You can create your own custom avatar for the masthead, change the icon in the dividers, 
+                    and add your email address to the contact form to make it fully functional!</p>
+            </div>
+
+            <button class="download_button">Free Download!</button>
+
         </div>
     </div>   
 </body>
