Finished Contact section

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -72,6 +72,24 @@
             <button class="download_button">Free Download!</button>
 
         </div>
+
+        <div class="contact_section">
+            <h1 class="sub_title">Contact me</h1>
+
+            <div class="divider">
+                <hr class="border gray_border"/>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5JO6QfXR2DNTITDvC4hG86tY0mvfPXrxn0Q&usqp=CAU" alt="star image">
+                <hr class="border gray_border"/>
+            </div>
+
+            <div class="contact_info">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Address">
+                <input type="number" placeholder="Phone Number">
+                <textarea placeholder="Message"></textarea>
+                <button class="send">Send</button>
+            </div>
+        </div>
     </div>   
 </body>
 </html>
