Added Reach Us section

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -90,6 +90,30 @@
                 <button class="send">Send</button>
             </div>
         </div>
+
+        <div class="reachus_section">
+            <div class="reachus">
+                <h2 class="white">Location</h2>
+                <p>2215 John Daniel Drive<br/>
+                    Clark, MO 65243</p>
+            </div>
+
+            <div class="reachus">
+                <h2 class="white">Around the web</h2>
+                <div class="media">
+                    <button class="socialmedia">f</button>
+                    <button class="socialmedia">t</button>
+                    <button class="socialmedia">in</button>
+                    <button class="socialmedia">d</button>
+                </div>
+            </div>
+
+            <div class="reachus">
+                <h2 class="white">About freelancer</h2>
+                <p>Freelance is a free to use, MIT licensed 
+                    Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
+            </div>
+        </div>
     </div>   
 </body>
 </html>
