--- a/bootstrap.html
+++ b/bootstrap.html
@@ -114,6 +114,10 @@
                     Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
             </div>
         </div>
+
+        <footer>
+            <h4>Copyright © Your Website 2022</h4>
+        </footer>
     </div>   
 </body>
 </html>
