Fixed responsiveness on phone

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -21,7 +21,7 @@
         </nav>
 
         <div class="hero_section">
-            <img src ="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="bootstrap avatar">
+            <img class="hero_image" src ="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="bootstrap avatar">
             <h1 class="title">Start bootstrap</h1>
 
             <div class="divider">
