--- a/bootstrap.html
+++ b/bootstrap.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <!--Start of main container-->
     <div class="main_container">
+        <!--Start of nav menu-->
         <nav>
             <h1>Start Bootstrap</h1>
 
@@ -19,8 +21,11 @@
                 <li class="option">Contact</li>
             </ul>
         </nav>
+        <!--End of nav menu-->
 
+        <!--Start of hero section-->
         <div class="hero_section">
+             <!--Content of hero section-->
             <img class="hero_image" src ="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="bootstrap avatar">
             <h1 class="title">Start bootstrap</h1>
 
@@ -32,8 +37,11 @@
 
             <p>Graphic Artist - Web Designer - Illustrator</p>
         </div>
+        <!--End of hero section-->
 
+        <!--Start of Portfolio section-->
         <div class="portfolios_section">
+            <!--Content of Portfolio section-->
             <h1 class="sub_title">Portfolio</h1>
 
             <div class="divider">
@@ -51,8 +59,11 @@
                 <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="submarine image">
             </div>
         </div>
+        <!--End of Portfolio section-->
 
+        <!--Start of About section-->
         <div class="about_section">
+            <!--Contnet of About section-->
             <h1 class="sub_title white">About</h1>
 
             <div class="divider">
@@ -70,10 +81,12 @@
             </div>
 
             <button class="download_button">Free Download!</button>
-
         </div>
+        <!--End of About section-->
 
+        <!--Start of Contact section-->
         <div class="contact_section">
+            <!--Content of Contact section-->
             <h1 class="sub_title">Contact me</h1>
 
             <div class="divider">
@@ -90,8 +103,11 @@
                 <button class="send">Send</button>
             </div>
         </div>
+        <!--End of Contact section-->
 
+        <!--Start of Reach Us section-->
         <div class="reachus_section">
+            <!--Content of Reach Us section-->
             <div class="reachus">
                 <h2 class="white">Location</h2>
                 <p>2215 John Daniel Drive<br/>
@@ -114,10 +130,12 @@
                     Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
             </div>
         </div>
+        <!--End of Reach Us section-->
 
         <footer>
             <h4>Copyright © Your Website 2022</h4>
         </footer>
     </div>   
+    <!--End of main container-->
 </body>
 </html>
