Added hamburger menu

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -15,6 +15,11 @@
         <nav>
             <h1>Start Bootstrap</h1>
 
+            <input id="menu-toggle" type="checkbox" />
+            <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'></div>
+            </label>
+
             <ul class="menu">
                 <li class="option">Portfolio</li>
                 <li class="option">About</li>
