Initailized variables in JS

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -101,11 +101,12 @@
             </div>
 
             <div class="contact_info">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email Address">
-                <input type="number" placeholder="Phone Number">
-                <textarea placeholder="Message"></textarea>
-                <button class="send">Send</button>
+                <input type="text" id="fullname" placeholder="Full Name">
+                <input type="email" id="email" placeholder="Email Address">
+                <input type="number" id="phone_number" placeholder="Phone Number">
+                <textarea id="message" placeholder="Message"></textarea>
+                <button id="submit" class="send">Send</button>
+                <h2 id="error"></h2>
             </div>
         </div>
         <!--End of Contact section-->
