Added validateName function

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -106,7 +106,7 @@
                 <input type="number" id="phone_number" placeholder="Phone Number">
                 <textarea id="message" placeholder="Message"></textarea>
                 <button id="submit" class="send">Send</button>
-                <h2 id="error"></h2>
+                <h4 id="error"></h4>
             </div>
         </div>
         <!--End of Contact section-->
@@ -143,5 +143,7 @@
         </footer>
     </div>   
     <!--End of main container-->
+
+    <script src="js/script.js"></script>
 </body>
 </html>
