--- a/bootstrap.html
+++ b/bootstrap.html
@@ -106,7 +106,10 @@
                 <input type="number" id="phone_number" placeholder="Phone Number">
                 <textarea id="message" placeholder="Message"></textarea>
                 <button id="submit" class="send">Send</button>
-                <h4 id="error"></h4>
+            </div>
+
+            <div class="error">
+                <h3 id="error"></h3>
             </div>
         </div>
         <!--End of Contact section-->
