--- a/bootstrap.html
+++ b/bootstrap.html
@@ -101,11 +101,13 @@
             </div>
 
             <div class="contact_info">
-                <input type="text" id="fullname" placeholder="Full Name">
-                <input type="email" id="email" placeholder="Email Address">
-                <input type="number" id="phone_number" placeholder="Phone Number">
-                <textarea id="message" placeholder="Message"></textarea>
-                <button id="submit" class="send">Send</button>
+                <form name="formContact" method="post" action="contact.php">
+                    <input type="text" id="fullname" placeholder="Full Name">
+                    <input type="email" id="email" placeholder="Email Address">
+                    <input type="number" id="phone_number" placeholder="Phone Number">
+                    <textarea id="message" placeholder="Message"></textarea>
+                    <input type="submit" class="send" name="submit" id="submit" value="Send">
+                </form>
             </div>
 
             <div class="error">
