Added table header

--- a/messages.html
+++ b/messages.html
@@ -41,6 +41,12 @@
             </div>
 
             <table id="messages_table">
+                <tr>
+                    <th>Name</th>
+                    <th>Phone number</th>
+                    <th>Email</th>
+                    <th>Message</th>
+                </tr>
             </table>    
         </div>
         <!--End of hero section-->
